Modify CSS style in big-feature-section

--- a/public/index.html
+++ b/public/index.html
@@ -160,10 +160,7 @@
     </section>
 
     <section class="big-feature-section">
-      <div
-        class="container flex big-feature-container"
-        style="flex-direction: row-reverse"
-      >
+      <div class="container flex big-feature-container working-img">
         <div class="feature-img">
           <img src="./assets/asset 21.png" alt="" />
         </div>
